fix: today to day
